<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity"
                                             android:background="@color/backgroundOlive">

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:id="@+id/recycleViewUpcoming"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:scrollbars="horizontal"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/upcomingLabel">


            </android.support.v7.widget.RecyclerView>
            <TextView
                    android:text="@string/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewAllUpcoming"
                    android:onClick="onClickViewAll"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorOrangeText"
                    app:layout_constraintBottom_toTopOf="@+id/recycleViewUpcoming"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp"/>
            <TextView
                    android:text="@string/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:id="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/search_button"/>
            <TextView
                    android:text="my location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:id="@+id/locationView" app:layout_constraintStart_toEndOf="@+id/textView3"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/search_button"/>
            <TextView
                    android:text="@string/upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/upcomingLabel"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintEnd_toStartOf="@+id/viewAllUpcoming"
                    android:layout_marginEnd="216dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.181"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            />

            <android.support.v7.widget.RecyclerView
                    android:layout_width="368dp"
                    android:layout_height="220dp"
                    android:id="@+id/recycleViewWeekRelease"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:scrollbars="horizontal"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="64dp"
                    app:layout_constraintTop_toBottomOf="@+id/recycleViewUpcoming"/>
            <TextView
                    android:text="@string/week_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintBottom_toTopOf="@+id/recycleViewWeekRelease"/>
            <TextView
                    android:text="@string/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOrangeText"
                    android:onClick="onClickViewAll"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/viewAllWeek" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/recycleViewWeekRelease"
                    app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.858"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="64dp"
                    app:layout_constraintTop_toBottomOf="@+id/recycleViewWeekRelease"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:id="@+id/recyclerViewTopRated"/>
            <TextView
                    android:text="@string/top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"

                    android:id="@+id/textView4"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerViewTopRated"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:text="@string/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickViewAll"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/viewAllTop"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerViewTopRated"
                    android:textColor="@color/colorOrangeText"
                    app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.899"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressUpcoming"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:visibility="visible" app:layout_constraintTop_toTopOf="@+id/recycleViewUpcoming"
                    android:layout_marginTop="76dp"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressWeek" android:layout_marginTop="240dp"
                    app:layout_constraintTop_toBottomOf="@+id/progressUpcoming"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressTop" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="236dp" app:layout_constraintTop_toBottomOf="@+id/progressWeek"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="223dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxCornerRadiusTopStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:errorEnabled="true"
                    app:boxBackgroundColor="#FFFF"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:id="@+id/movie_title_search">

                <android.support.design.widget.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Movie" />
            </android.support.design.widget.TextInputLayout>
            <Button
                    android:text="Search"
                    android:onClick="startSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_button"
                    android:background="@drawable/my_btn"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title_search"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundOlive"
            android:id="@+id/noConnection"
            android:visibility="gone" tools:layout_editor_absoluteY="53dp" tools:layout_editor_absoluteX="0dp">

        <ImageView
                android:layout_width="222dp"
                android:layout_height="197dp"
                app:srcCompat="@drawable/cinema_logo" android:id="@+id/imageView"

                android:layout_alignParentTop="true"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Internet Connection!"
                android:fontFamily="@font/bebas"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:textColor="@color/colorOrangeText" android:layout_centerHorizontal="true"
                android:layout_below="@+id/imageView" android:layout_marginTop="8dp" android:id="@+id/textView5"/>
        <Button
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:id="@+id/reconnect"
                android:text="RECONNECT"
                android:textColor="#ffffff"
                android:background="@drawable/my_btn"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:onClick="restartInit"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>